[2h] Added lombok dependency to ease POJOs definition; Added missing persistence annotations on services, repositories and persisted entities; Changed BattleReportRepository to ArmyRepository; Filled and improved models, repositories, controllers, services (TODO BattleServiceImpl logic implementation);